src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedResourceClassType1/Entity/ResourceX.php
<?php

namespace Invalid\UnexpectedResourceClassType1\Entity;

/**
 * This entity doesn't extend Claroline AbstractResource
 */
class ResourceX
{
}